@@ -22,24 +22,36 @@ import net.minecraft.text.OrderedText;
 import net.minecraft.text.Text;
 import org.jspecify.annotations.Nullable;
 
-/** Arcane's detached, game-first overlay control center. */
+/**
+ * Arcane's Click GUI: one draggable panel split into a category rail, a dense module list and an
+ * inspector for the selected module's settings.
+ */
 @Environment(EnvType.CLIENT)
 public final class ArcaneSettingsScreen extends Screen {
-    private static final int FRAME_MARGIN = 10;
-    private static final int FRAME_MAX_WIDTH = 420;
-    private static final int FRAME_MAX_HEIGHT = 48;
-    private static final int HEADER_HEIGHT = 48;
-    private static final int HERO_HEIGHT = 42;
-    private static final int CONTENT_PAD = 10;
-    private static final int CARD_GAP = 8;
-    private static final int CARD_HEIGHT = 58;
-    private static final int SHEET_MARGIN = 12;
-    private static final int WORKSPACE_MAX_WIDTH = 342;
-    private static final int WORKSPACE_MAX_HEIGHT = 248;
-    private static final int SHEET_MAX_HEIGHT = 286;
+    private static final int PANEL_RADIUS = 12;
+    private static final int PANEL_MIN_WIDTH = 348;
+    private static final int PANEL_MAX_WIDTH = 572;
+    private static final int PANEL_MIN_HEIGHT = 208;
+    private static final int PANEL_MAX_HEIGHT = 348;
+    private static final int HEADER_HEIGHT = 40;
+    private static final int FOOTER_HEIGHT = 21;
+    private static final int RAIL_WIDTH = 112;
+    private static final int INSPECTOR_WIDTH = 208;
+    private static final int MIN_LIST_WIDTH = 150;
+    private static final int LIST_LABEL_HEIGHT = 19;
+    private static final int ROW_HEIGHT = 24;
+    private static final int RAIL_ROW_HEIGHT = 24;
+    private static final int PAD = 10;
+    private static final int TOGGLE_WIDTH = 24;
+    private static final int TOGGLE_HEIGHT = 11;
+    private static final int DOTS_ZONE = 18;
     private static final int MACRO_COUNT = 4;
-    private static final int MACRO_FIELD_WIDTH = 68;
-    private static final int BIND_KEY_WIDTH = 48;
+    private static final int MACRO_FIELD_WIDTH = 64;
+    private static final int BIND_KEY_WIDTH = 44;
+    private static final int SETTING_COMPACT_HEIGHT = 22;
+    private static final int SETTING_SLIDER_HEIGHT = 32;
+    private static final int SETTING_MESSAGE_HEIGHT = 34;
+    private static final int SETTING_GAP = 4;
 
     private final Screen parent;
     private final ArcaneConfig config;
@@ -55,16 +67,16 @@ public final class ArcaneSettingsScreen extends Screen {
     private String query = "";
     private String fpsLabel = "";
     private long nextFpsUpdateNanos;
-    private int frameX, frameY, frameWidth, frameHeight;
-    private int workspaceX, workspaceY, workspaceWidth, workspaceHeight;
+    private int panelX, panelY, panelWidth, panelHeight;
     private int listX, listY, listWidth, listHeight;
-    private int detailX, detailY, detailWidth, detailHeight;
+    private int inspectorX, inspectorY, inspectorWidth, inspectorHeight;
     private int listScroll, listMaxScroll, detailScroll, detailMaxScroll;
+    private int panelOffsetX, panelOffsetY;
     private GuiCategory selectedCategory;
     private GuiModule selectedModule;
     private boolean settingsOpen;
-    private int workspaceOffsetX, workspaceOffsetY, detailOffsetX, detailOffsetY;
-    private @Nullable DragTarget draggingSurface;
+    private boolean inspectorOverlay;
+    private boolean dragging;
     private int dragStartMouseX, dragStartMouseY, dragStartOffsetX, dragStartOffsetY;
     private GuiSetting.@Nullable Slider draggingSlider;
     private int sliderTrackX;
@@ -86,14 +98,12 @@ public final class ArcaneSettingsScreen extends Screen {
         ArcaneFont.invalidate();
         this.uiFont = null;
         this.wrapCache.clear();
-        layoutFrame();
-        int searchWidth = Math.clamp(this.frameWidth / 4, 126, 190);
-        int searchX = this.frameX + this.frameWidth - searchWidth - 23;
-        this.searchInput = new TextFieldWidget(font(), searchX, this.frameY + 17, searchWidth, 12, Text.literal("Search modules"));
+        layoutPanel();
+        this.searchInput = new TextFieldWidget(font(), 0, 0, 80, 12, Text.literal("Search modules"));
         this.searchInput.setDrawsBackground(false);
         this.searchInput.setTextShadow(false);
         this.searchInput.setMaxLength(48);
-        this.searchInput.setPlaceholder(ArcaneFont.text("Search modules..."));
+        this.searchInput.setPlaceholder(ArcaneFont.text("Search"));
         styleField(this.searchInput);
         this.searchInput.setText(this.searchText);
         this.searchInput.setChangedListener(this::updateFilter);
@@ -117,178 +127,214 @@ public final class ArcaneSettingsScreen extends Screen {
         ensureSelection();
     }
 
-    private void layoutFrame() {
-        boolean compactViewport = this.width < 520;
-        int launcherMaxWidth = compactViewport ? 330 : FRAME_MAX_WIDTH;
-        this.frameWidth = Math.min(launcherMaxWidth, Math.max(292, this.width - FRAME_MARGIN * 2));
-        this.frameHeight = FRAME_MAX_HEIGHT;
-        this.frameX = (this.width - this.frameWidth) / 2;
-        this.frameY = 8;
-        this.detailWidth = this.settingsOpen ? Math.clamp(this.width * 39 / 100, 226, 260) : 0;
-        this.workspaceWidth = Math.min(compactViewport ? 300 : WORKSPACE_MAX_WIDTH, this.width - 24);
-        if (this.settingsOpen) this.workspaceWidth = Math.min(this.workspaceWidth, Math.max(280, this.width - this.detailWidth - 38));
-        int baseWorkspaceX = 14;
-        int baseWorkspaceY = this.frameY + HEADER_HEIGHT + 10;
-        this.workspaceHeight = Math.max(148, Math.min(WORKSPACE_MAX_HEIGHT, this.height - baseWorkspaceY - 6));
-        this.workspaceX = Math.clamp(baseWorkspaceX + this.workspaceOffsetX, 6, Math.max(6, this.width - this.workspaceWidth - 6));
-        this.workspaceY = Math.clamp(baseWorkspaceY + this.workspaceOffsetY, this.frameY + HEADER_HEIGHT + 4, Math.max(this.frameY + HEADER_HEIGHT + 4, this.height - this.workspaceHeight - 6));
-        this.workspaceOffsetX = this.workspaceX - baseWorkspaceX;
-        this.workspaceOffsetY = this.workspaceY - baseWorkspaceY;
-        this.listX = this.workspaceX + CONTENT_PAD;
-        this.listY = this.workspaceY + HERO_HEIGHT;
-        this.listWidth = this.workspaceWidth - CONTENT_PAD * 2;
-        this.listHeight = this.workspaceY + this.workspaceHeight - CONTENT_PAD - this.listY;
-        int baseDetailX = Math.min(this.width - this.detailWidth - SHEET_MARGIN, this.workspaceX + this.workspaceWidth + SHEET_MARGIN);
-        int baseDetailY = this.workspaceY;
-        this.detailX = this.settingsOpen ? Math.clamp(baseDetailX + this.detailOffsetX, 6, Math.max(6, this.width - this.detailWidth - 6)) : 0;
-        this.detailY = Math.clamp(baseDetailY + this.detailOffsetY, this.frameY + HEADER_HEIGHT + 4, Math.max(this.frameY + HEADER_HEIGHT + 4, this.height - SHEET_MAX_HEIGHT - 6));
-        this.detailOffsetX = this.detailX - baseDetailX;
-        this.detailOffsetY = this.detailY - baseDetailY;
-        this.detailHeight = Math.min(SHEET_MAX_HEIGHT, this.workspaceHeight);
+    private void layoutPanel() {
+        this.panelWidth = Math.clamp(this.width - 48, PANEL_MIN_WIDTH, PANEL_MAX_WIDTH);
+        this.panelWidth = Math.min(this.panelWidth, Math.max(220, this.width - 8));
+        this.panelHeight = Math.clamp(this.height - 64, PANEL_MIN_HEIGHT, PANEL_MAX_HEIGHT);
+        this.panelHeight = Math.min(this.panelHeight, Math.max(150, this.height - 8));
+
+        int baseX = (this.width - this.panelWidth) / 2;
+        int baseY = (this.height - this.panelHeight) / 2;
+        this.panelX = Math.clamp(baseX + this.panelOffsetX, 4, Math.max(4, this.width - this.panelWidth - 4));
+        this.panelY = Math.clamp(baseY + this.panelOffsetY, 4, Math.max(4, this.height - this.panelHeight - 4));
+        this.panelOffsetX = this.panelX - baseX;
+        this.panelOffsetY = this.panelY - baseY;
+
+        int bodyY = this.panelY + HEADER_HEIGHT;
+        int bodyHeight = this.panelHeight - HEADER_HEIGHT - FOOTER_HEIGHT;
+        int columnWidth = this.panelWidth - RAIL_WIDTH;
+        boolean roomForBoth = columnWidth - INSPECTOR_WIDTH >= MIN_LIST_WIDTH;
+        boolean showInspector = this.selectedModule != null && (roomForBoth || this.settingsOpen);
+        this.inspectorOverlay = showInspector && !roomForBoth;
+        this.inspectorWidth = !showInspector ? 0 : this.inspectorOverlay ? columnWidth : INSPECTOR_WIDTH;
+
+        this.listX = this.panelX + RAIL_WIDTH;
+        this.listY = bodyY + LIST_LABEL_HEIGHT;
+        this.listWidth = columnWidth - this.inspectorWidth;
+        this.listHeight = bodyHeight - LIST_LABEL_HEIGHT;
+
+        this.inspectorX = this.inspectorOverlay ? this.listX : this.panelX + this.panelWidth - this.inspectorWidth;
+        this.inspectorY = bodyY;
+        this.inspectorHeight = bodyHeight;
+    }
+
+    /**
+     * In world the Click GUI stays a true overlay: no blur, no darkening, nothing drawn behind the
+     * panel. Legibility comes from the panel's own translucency instead. Outside a world there is
+     * no game to see, so the vanilla menu background still applies.
+     */
+    @Override
+    public void renderBackground(DrawContext graphics, int mouseX, int mouseY, float deltaTicks) {
+        if (this.client == null || this.client.world == null) {
+            super.renderBackground(graphics, mouseX, mouseY, deltaTicks);
+        }
     }
 
     @Override
     public void render(DrawContext graphics, int mouseX, int mouseY, float deltaTicks) {
-        layoutFrame();
-        boolean compactViewport = this.width < 520;
-        int searchWidth = Math.clamp(this.frameWidth / 4, 96, 116);
-        this.searchInput.setX(this.frameX + this.frameWidth - searchWidth - 11);
-        this.searchInput.setY(this.frameY + 18);
-        this.searchInput.setWidth(searchWidth);
-        this.searchInput.setVisible(!compactViewport);
-        if (compactViewport && this.searchInput.isFocused()) this.searchInput.setFocused(false);
+        layoutPanel();
         ClickGuiColors theme = theme();
         this.hitRegions.clear();
         boolean[] macroDrawn = new boolean[MACRO_COUNT];
-        drawFrame(graphics, theme);
+
+        drawPanelShell(graphics, theme);
         drawHeader(graphics, mouseX, mouseY, theme);
-        drawTelemetry(graphics, theme);
-        drawModuleList(graphics, mouseX, mouseY, theme);
-        if (this.settingsOpen) drawInspector(graphics, mouseX, mouseY, theme, macroDrawn);
+        drawRail(graphics, mouseX, mouseY, theme);
+        if (this.listWidth >= 60) drawModuleList(graphics, mouseX, mouseY, theme);
+        if (this.inspectorWidth > 0) drawInspector(graphics, mouseX, mouseY, theme, macroDrawn);
+        drawFooter(graphics, theme);
         for (int slot = 0; slot < MACRO_COUNT; slot++) if (!macroDrawn[slot]) hideMacroInput(slot);
         super.render(graphics, mouseX, mouseY, deltaTicks);
     }
 
-    private void drawFrame(DrawContext graphics, ClickGuiColors theme) {
-        RoundedGui.fill(graphics, this.frameX + 3, this.frameY + 4, this.frameWidth, this.frameHeight, 15, 0x65000000);
-        RoundedGui.fill(graphics, this.frameX, this.frameY, this.frameWidth, this.frameHeight, 15, theme.bar());
-        RoundedGui.fill(graphics, this.frameX + 1, this.frameY + 1, this.frameWidth - 2, this.frameHeight - 2, 14, theme.window());
-    }
+    private void drawPanelShell(DrawContext graphics, ClickGuiColors theme) {
+        RoundedGui.fill(graphics, this.panelX + 2, this.panelY + 5, this.panelWidth, this.panelHeight, PANEL_RADIUS, 0x5C000000);
+        RoundedGui.fill(graphics, this.panelX, this.panelY, this.panelWidth, this.panelHeight, PANEL_RADIUS, theme.window());
+        RoundedGui.outlineOnly(graphics, this.panelX, this.panelY, this.panelWidth, this.panelHeight, PANEL_RADIUS, theme.outline());
 
-    private void drawTelemetry(DrawContext graphics, ClickGuiColors theme) {
-        int widgetWidth = 92;
-        int widgetX = this.width - widgetWidth - 12;
-        int widgetY = this.frameY;
-        if (widgetX < this.frameX + this.frameWidth + 8) return;
-        updateFpsLabel();
-        RoundedGui.fill(graphics, widgetX + 3, widgetY + 4, widgetWidth, this.frameHeight, 15, 0x65000000);
-        RoundedGui.fill(graphics, widgetX, widgetY, widgetWidth, this.frameHeight, 15, theme.window());
-        RoundedGui.fill(graphics, widgetX + 9, widgetY + 10, 5, 28, 3, theme.accent());
-        graphics.drawText(font(), ArcaneFont.text(this.fpsLabel), widgetX + 22, widgetY + 10, theme.text(), false);
-        graphics.drawText(font(), ArcaneFont.text(activeModuleCount() + " ACTIVE"), widgetX + 22, widgetY + 25, theme.faint(), false);
+        int bodyY = this.panelY + HEADER_HEIGHT;
+        int bodyBottom = this.panelY + this.panelHeight - FOOTER_HEIGHT;
+        graphics.fill(this.panelX + 1, bodyY - 1, this.panelX + this.panelWidth - 1, bodyY, theme.outlineSoft());
+        graphics.fill(this.panelX + 1, bodyBottom, this.panelX + this.panelWidth - 1, bodyBottom + 1, theme.outlineSoft());
+        RoundedGui.fill(graphics, this.panelX + 1, bodyY, RAIL_WIDTH - 1, bodyBottom - bodyY, 0, theme.nest());
+        graphics.fill(this.panelX + RAIL_WIDTH, bodyY, this.panelX + RAIL_WIDTH + 1, bodyBottom, theme.outlineSoft());
+        if (this.inspectorWidth > 0 && !this.inspectorOverlay) {
+            graphics.fill(this.inspectorX - 1, bodyY, this.inspectorX, bodyBottom, theme.outlineSoft());
+            RoundedGui.fill(graphics, this.inspectorX, bodyY, this.inspectorWidth - 1, bodyBottom - bodyY, 0, theme.nest());
+        }
     }
 
     private void drawHeader(DrawContext graphics, int mouseX, int mouseY, ClickGuiColors theme) {
-        boolean compactViewport = this.width < 520;
-        int brandX = this.frameX + 10;
-        int brandY = this.frameY + 10;
-        RoundedGui.fill(graphics, brandX, brandY, 28, 28, 9, theme.accent());
-        graphics.drawText(font(), ArcaneFont.text("A/"), brandX + 7, brandY + 10, opaque(theme.bar()), false);
+        this.hitRegions.add(HitRegion.drag(this.panelX, this.panelY, this.panelWidth, HEADER_HEIGHT));
+        int brandX = this.panelX + 11;
+        int brandY = this.panelY + 9;
+        RoundedGui.gradient(graphics, brandX, brandY, 22, 22, 7, theme.accent(), theme.accentAlt(), false);
+        int glyphX = brandX + (22 - ArcaneFont.width(font(), "A")) / 2;
+        graphics.drawText(font(), ArcaneFont.text("A"), glyphX, brandY + 7, opaque(theme.bar()), false);
+        int textY = this.panelY + (HEADER_HEIGHT - lineHeight()) / 2;
+        graphics.drawText(font(), ArcaneFont.text("ARCANE"), brandX + 30, textY, theme.text(), false);
 
-        int searchX = this.searchInput.getX();
-        if (!compactViewport) {
-            int searchY = this.searchInput.getY();
-            int searchWidth = this.searchInput.getWidth();
-            boolean focused = this.searchInput.isFocused();
-            RoundedGui.fill(graphics, searchX - 21, searchY - 5, searchWidth + 27, 22, 8, focused ? theme.hover() : theme.header());
-            graphics.drawText(font(), ArcaneFont.text("/"), searchX - 13, searchY + 1, focused ? theme.accentBright() : theme.faint(), false);
-            if (focused) graphics.fill(searchX - 14, searchY + 15, searchX + searchWidth, searchY + 16, theme.accent());
+        int right = this.panelX + this.panelWidth - 11;
+        boolean closeHovered = contains(right - 16, this.panelY + 12, 16, 16, mouseX, mouseY);
+        RoundedGui.fill(graphics, right - 16, this.panelY + 12, 16, 16, 6, closeHovered ? theme.hover() : theme.header());
+        graphics.drawText(font(), ArcaneFont.text("\u00d7"), right - 16 + (16 - ArcaneFont.width(font(), "\u00d7")) / 2, this.panelY + 16, closeHovered ? theme.text() : theme.faint(), false);
+        this.hitRegions.add(HitRegion.close(right - 16, this.panelY + 12, 16, 16));
+
+        int searchWidth = Math.clamp(this.panelWidth / 3, 92, 148);
+        int searchX = right - 22 - searchWidth;
+        int searchY = this.panelY + 11;
+        if (searchX < brandX + 30 + ArcaneFont.width(font(), "ARCANE") + 14) {
+            this.searchInput.setVisible(false);
+            if (this.searchInput.isFocused()) this.searchInput.setFocused(false);
+            return;
         }
+        boolean focused = this.searchInput.isFocused();
+        RoundedGui.fill(graphics, searchX, searchY, searchWidth, 18, 7, focused ? theme.hover() : theme.header());
+        if (focused) RoundedGui.outlineOnly(graphics, searchX, searchY, searchWidth, 18, 7, theme.accent());
+        graphics.drawText(font(), ArcaneFont.text("/"), searchX + 8, searchY + 5, focused ? theme.accentBright() : theme.faint(), false);
+        this.searchInput.setVisible(true);
+        this.searchInput.setX(searchX + 16);
+        this.searchInput.setY(searchY + 5);
+        this.searchInput.setWidth(searchWidth - 22);
+        this.hitRegions.add(HitRegion.passthrough(searchX, searchY, searchWidth, 18));
+    }
 
-        int tabsX = brandX + 37;
-        int tabsY = brandY + 2;
-        int tabsWidth = (compactViewport ? this.frameX + this.frameWidth - 10 : searchX - 29) - tabsX;
-        int tabWidth = Math.max(28, tabsWidth / this.categories.size());
-        for (int index = 0; index < this.categories.size(); index++) {
-            GuiCategory category = this.categories.get(index);
-            int tabX = tabsX + index * tabWidth;
-            int width = tabWidth - 3;
+    private void drawRail(DrawContext graphics, int mouseX, int mouseY, ClickGuiColors theme) {
+        int rowY = this.panelY + HEADER_HEIGHT + 7;
+        int rowX = this.panelX + 6;
+        int rowWidth = RAIL_WIDTH - 12;
+        int bodyBottom = this.panelY + this.panelHeight - FOOTER_HEIGHT;
+        for (GuiCategory category : this.categories) {
+            if (rowY + RAIL_ROW_HEIGHT > bodyBottom) break;
             boolean selected = category == this.selectedCategory && this.query.isEmpty();
-            boolean hovered = contains(tabX, tabsY, width, 24, mouseX, mouseY);
-            if (selected || hovered) RoundedGui.fill(graphics, tabX, tabsY, width, 24, 8, selected ? theme.active() : theme.hover());
-            String glyph = categoryGlyph(category.name());
-            int glyphWidth = ArcaneFont.width(font(), glyph);
-            graphics.drawText(font(), ArcaneFont.text(glyph), tabX + (width - glyphWidth) / 2, tabsY + 8, selected ? theme.accentBright() : theme.muted(), false);
-            if (selected) RoundedGui.fill(graphics, tabX + width / 2 - 2, tabsY + 27, 4, 2, 1, theme.accent());
-            this.hitRegions.add(HitRegion.category(category, tabX, tabsY, width, 28));
+            boolean hovered = contains(rowX, rowY, rowWidth, RAIL_ROW_HEIGHT, mouseX, mouseY);
+            if (selected) RoundedGui.fill(graphics, rowX, rowY, rowWidth, RAIL_ROW_HEIGHT, 7, theme.active());
+            else if (hovered) RoundedGui.fill(graphics, rowX, rowY, rowWidth, RAIL_ROW_HEIGHT, 7, theme.hover());
+            if (selected) RoundedGui.gradient(graphics, rowX + 3, rowY + 5, 3, RAIL_ROW_HEIGHT - 10, 1, theme.accent(), theme.accentAlt(), false);
+
+            int labelColor = selected ? theme.text() : hovered ? theme.muted() : theme.faint();
+            int labelX = rowX + 11;
+            int enabled = category.enabledCount();
+            int labelLimit = rowWidth - 16 - (enabled > 0 ? 14 : 0);
+            graphics.drawText(font(), ArcaneFont.trimmed(font(), categoryLabel(category.name()), labelLimit), labelX, rowY + (RAIL_ROW_HEIGHT - lineHeight()) / 2, labelColor, false);
+            if (enabled > 0) {
+                String count = Integer.toString(enabled);
+                graphics.drawText(font(), ArcaneFont.text(count), rowX + rowWidth - 6 - ArcaneFont.width(font(), count), rowY + (RAIL_ROW_HEIGHT - lineHeight()) / 2, selected ? theme.accentBright() : theme.accentDim(), false);
+            }
+            this.hitRegions.add(HitRegion.category(category, rowX, rowY, rowWidth, RAIL_ROW_HEIGHT));
+            rowY += RAIL_ROW_HEIGHT + 2;
         }
     }
 
     private void drawModuleList(DrawContext graphics, int mouseX, int mouseY, ClickGuiColors theme) {
-        RoundedGui.fill(graphics, this.workspaceX + 4, this.workspaceY + 5, this.workspaceWidth, this.workspaceHeight, 13, 0x65000000);
-        RoundedGui.fill(graphics, this.workspaceX, this.workspaceY, this.workspaceWidth, this.workspaceHeight, 13, theme.window());
-        RoundedGui.fill(graphics, this.workspaceX + 1, this.workspaceY + 1, this.workspaceWidth - 2, HERO_HEIGHT - 7, 12, theme.header());
-        this.hitRegions.add(HitRegion.dragWorkspace(this.workspaceX + 1, this.workspaceY + 1, this.workspaceWidth - 2, HERO_HEIGHT - 7));
-        int titleX = this.workspaceX + 13;
-        int titleY = this.workspaceY + 9;
-        String title = this.query.isEmpty() ? titleCase(this.selectedCategory.name()) : "Search / " + this.searchText;
-        graphics.drawText(font(), ArcaneFont.text(title), titleX, titleY, theme.text(), false);
-        String summary = this.query.isEmpty()
-            ? this.selectedCategory.visible().size() + " modules · " + this.selectedCategory.enabledCount() + " on"
-            : visibleModuleCount() + " matching modules";
-        graphics.drawText(font(), ArcaneFont.text(summary), titleX, titleY + 15, theme.faint(), false);
-        int statusX = this.workspaceX + this.workspaceWidth - 12;
-        for (int dot = 0; dot < 3; dot++) RoundedGui.fill(graphics, statusX - 13 + dot * 6, titleY + 9, 3, 3, 2, theme.faint());
-
         List<ModuleEntry> entries = visibleEntries();
-        int columns = this.listWidth >= 610 ? 3 : 2;
-        int cardWidth = (this.listWidth - CARD_GAP * (columns - 1)) / columns;
-        int rows = (entries.size() + columns - 1) / columns;
-        int contentHeight = Math.max(0, rows * (CARD_HEIGHT + CARD_GAP) - CARD_GAP);
-        this.listMaxScroll = Math.max(0, contentHeight - this.listHeight);
+        String label = this.query.isEmpty()
+            ? categoryLabel(this.selectedCategory.name()).toUpperCase(Locale.ROOT)
+            : "SEARCH";
+        String count = this.query.isEmpty()
+            ? entries.size() + " MODULES"
+            : entries.size() + (entries.size() == 1 ? " RESULT" : " RESULTS");
+        int labelY = this.panelY + HEADER_HEIGHT + (LIST_LABEL_HEIGHT - lineHeight()) / 2;
+        graphics.drawText(font(), ArcaneFont.trimmed(font(), label, this.listWidth - 70), this.listX + PAD, labelY, theme.accentBright(), false);
+        graphics.drawText(font(), ArcaneFont.text(count), this.listX + this.listWidth - PAD - ArcaneFont.width(font(), count), labelY, theme.faint(), false);
+
+        int rowX = this.listX + PAD;
+        int rowWidth = this.listWidth - PAD * 2;
+        int contentHeight = Math.max(0, entries.size() * (ROW_HEIGHT + 2) - 2);
+        this.listMaxScroll = Math.max(0, contentHeight - this.listHeight + 6);
         this.listScroll = Math.clamp(this.listScroll, 0, this.listMaxScroll);
+
         graphics.enableScissor(this.listX, this.listY, this.listX + this.listWidth, this.listY + this.listHeight);
         for (int index = 0; index < entries.size(); index++) {
-            int column = index % columns;
-            int row = index / columns;
-            int cardX = this.listX + column * (cardWidth + CARD_GAP);
-            int cardY = this.listY + row * (CARD_HEIGHT + CARD_GAP) - this.listScroll;
-            if (cardY + CARD_HEIGHT >= this.listY && cardY <= this.listY + this.listHeight) {
-                drawModuleCard(graphics, entries.get(index), index, cardX, cardY, cardWidth, mouseX, mouseY, theme);
-            }
+            int rowY = this.listY + 2 + index * (ROW_HEIGHT + 2) - this.listScroll;
+            if (rowY + ROW_HEIGHT < this.listY || rowY > this.listY + this.listHeight) continue;
+            drawModuleRow(graphics, entries.get(index), rowX, rowY, rowWidth, mouseX, mouseY, theme);
         }
         graphics.disableScissor();
-        if (entries.isEmpty()) graphics.drawCenteredTextWithShadow(font(), ArcaneFont.text("No matching modules"), this.listX + this.listWidth / 2, this.listY + this.listHeight / 2, theme.faint());
-        drawScrollBar(graphics, this.listX + this.listWidth + 5, this.listY, this.listHeight, this.listScroll, this.listMaxScroll, contentHeight, theme);
+        if (entries.isEmpty()) {
+            graphics.drawCenteredTextWithShadow(font(), ArcaneFont.text("No matching modules"), this.listX + this.listWidth / 2, this.listY + this.listHeight / 2 - 4, theme.faint());
+        }
+        drawScrollBar(graphics, this.listX + this.listWidth - 4, this.listY + 2, this.listHeight - 6, this.listScroll, this.listMaxScroll, contentHeight, theme);
     }
 
-    private void drawModuleCard(DrawContext graphics, ModuleEntry entry, int index, int x, int y, int width, int mouseX, int mouseY, ClickGuiColors theme) {
+    private void drawModuleRow(DrawContext graphics, ModuleEntry entry, int x, int y, int width, int mouseX, int mouseY, ClickGuiColors theme) {
         GuiModule module = entry.module();
-        boolean selected = module == this.selectedModule && this.settingsOpen;
-        boolean hovered = contains(x, y, width, CARD_HEIGHT, mouseX, mouseY);
-        int surface = selected ? theme.active() : hovered ? theme.hover() : theme.row();
-        RoundedGui.fill(graphics, x, y, width, CARD_HEIGHT, 11, surface);
-        if (selected || module.enabled()) RoundedGui.fill(graphics, x, y, 3, CARD_HEIGHT, 2, selected ? theme.accentBright() : theme.accentDim());
+        boolean inspected = module == this.selectedModule && this.inspectorWidth > 0;
+        boolean hovered = contains(x, y, width, ROW_HEIGHT, mouseX, mouseY) && withinList(y);
+        boolean enabled = module.enabled();
+        if (inspected) RoundedGui.fill(graphics, x, y, width, ROW_HEIGHT, 7, theme.active());
+        else if (hovered) RoundedGui.fill(graphics, x, y, width, ROW_HEIGHT, 7, theme.hover());
+        else if (enabled) RoundedGui.fill(graphics, x, y, width, ROW_HEIGHT, 7, theme.row());
+        if (enabled) RoundedGui.gradient(graphics, x + 4, y + 6, 3, ROW_HEIGHT - 12, 1, theme.accent(), theme.accentAlt(), false);
 
-        String serial = twoDigits(index + 1);
-        graphics.drawText(font(), ArcaneFont.text(serial), x + 12, y + 10, module.enabled() ? theme.accentBright() : theme.faint(), false);
-        String category = this.query.isEmpty() ? "MODULE" : titleCase(entry.category().name());
-        graphics.drawText(font(), ArcaneFont.text(category), x + 32, y + 10, theme.faint(), false);
-        if (module.toggleable()) drawSwitch(graphics, x + width - 36, y + 8, module.enabled(), theme);
-        else if (module.valueLabel() != null) {
-            OrderedText value = ArcaneFont.trimmed(font(), module.valueLabel(), 48);
-            graphics.drawText(font(), value, x + width - font().getWidth(value) - 12, y + 11, theme.accentBright(), false);
+        boolean hasSettings = module.hasSettings();
+        int right = x + width;
+        int dotsX = right - DOTS_ZONE;
+        int controlRight = hasSettings ? dotsX : right - 6;
+        int textY = y + (ROW_HEIGHT - lineHeight()) / 2;
+
+        int nameLimit = controlRight - (x + 13) - (module.toggleable() ? TOGGLE_WIDTH + 8 : 78);
+        int nameColor = inspected ? theme.accentBright() : enabled ? theme.text() : theme.muted();
+        graphics.drawText(font(), ArcaneFont.trimmed(font(), module.name(), Math.max(24, nameLimit)), x + 13, textY, nameColor, false);
+
+        if (module.toggleable()) {
+            int toggleX = controlRight - TOGGLE_WIDTH - 4;
+            int toggleY = y + (ROW_HEIGHT - TOGGLE_HEIGHT) / 2;
+            drawSwitch(graphics, toggleX, toggleY, enabled, theme, false);
+            if (withinList(y)) this.hitRegions.add(HitRegion.moduleToggle(module, toggleX - 3, y, TOGGLE_WIDTH + 6, ROW_HEIGHT));
+        } else if (module.valueLabel() != null) {
+            OrderedText value = ArcaneFont.trimmed(font(), module.valueLabel(), 72);
+            graphics.drawText(font(), value, controlRight - 4 - font().getWidth(value), textY, theme.accentBright(), false);
         }
 
-        graphics.drawText(font(), ArcaneFont.trimmed(font(), module.name(), width - 26), x + 12, y + 30, selected ? theme.accentBright() : theme.text(), false);
-        String meta = shortDescription(module.description(), width - 42);
-        graphics.drawText(font(), ArcaneFont.trimmed(font(), meta, width - 42), x + 12, y + 46, theme.muted(), false);
-        if (module.hasSettings()) {
-            RoundedGui.fill(graphics, x + width - 24, y + CARD_HEIGHT - 19, 13, 13, 7, selected ? theme.accent() : theme.header());
-            graphics.drawText(font(), ArcaneFont.text("+"), x + width - 20, y + CARD_HEIGHT - 16, selected ? opaque(theme.bar()) : theme.faint(), false);
-        }
-        if (y >= this.listY && y + CARD_HEIGHT <= this.listY + this.listHeight) {
-            this.hitRegions.add(HitRegion.module(entry.category(), module, x, y, width, CARD_HEIGHT));
+        if (withinList(y)) this.hitRegions.add(HitRegion.module(entry.category(), module, x, y, width, ROW_HEIGHT));
+        if (hasSettings) {
+            boolean dotsHovered = contains(dotsX, y, DOTS_ZONE, ROW_HEIGHT, mouseX, mouseY) && withinList(y);
+            int dotColor = inspected ? theme.accentBright() : dotsHovered ? theme.text() : theme.faint();
+            for (int dot = 0; dot < 3; dot++) {
+                RoundedGui.fill(graphics, dotsX + 4 + dot * 4, y + ROW_HEIGHT / 2 - 1, 2, 2, 1, dotColor);
+            }
+            if (withinList(y)) this.hitRegions.add(HitRegion.moduleSettings(entry.category(), module, dotsX, y, DOTS_ZONE, ROW_HEIGHT));
         }
     }
 
@@ -299,130 +345,172 @@ public final class ArcaneSettingsScreen extends Screen {
             this.detailMaxScroll = 0;
             return;
         }
-        RoundedGui.fill(graphics, this.detailX + 4, this.detailY + 5, this.detailWidth, this.detailHeight, 13, 0x68000000);
-        RoundedGui.fill(graphics, this.detailX, this.detailY, this.detailWidth, this.detailHeight, 14, theme.bar());
-        RoundedGui.fill(graphics, this.detailX + 1, this.detailY + 1, this.detailWidth - 2, this.detailHeight - 2, 13, theme.window());
-        this.hitRegions.add(HitRegion.dragDetail(this.detailX + 1, this.detailY + 1, this.detailWidth - 2, 45));
+        if (this.inspectorOverlay) {
+            RoundedGui.fill(graphics, this.inspectorX, this.inspectorY, this.inspectorWidth, this.inspectorHeight, 0, theme.nest());
+        }
+        int x = this.inspectorX;
+        int right = x + this.inspectorWidth - 10;
+        graphics.drawText(font(), ArcaneFont.trimmed(font(), categoryLabel(this.selectedCategory.name()).toUpperCase(Locale.ROOT), this.inspectorWidth - 44), x + 10, this.inspectorY + 8, theme.accentBright(), false);
 
-        int headerX = this.detailX + 12;
-        int headerY = this.detailY + 10;
-        RoundedGui.fill(graphics, headerX, headerY, 30, 30, 9, theme.accent());
-        int moduleIndex = Math.max(0, this.selectedCategory.modules().indexOf(module));
-        graphics.drawText(font(), ArcaneFont.text(twoDigits(moduleIndex + 1)), headerX + 7, headerY + 11, opaque(theme.bar()), false);
-        graphics.drawText(font(), ArcaneFont.text("CONTROL / " + categoryGlyph(this.selectedCategory.name())), headerX + 39, headerY + 1, theme.accentBright(), false);
-        graphics.drawText(font(), ArcaneFont.trimmed(font(), module.name(), this.detailWidth - 118), headerX + 39, headerY + 16, theme.text(), false);
-
-        int closeX = this.detailX + this.detailWidth - 31;
-        int closeY = this.detailY + 12;
-        boolean closeHovered = contains(closeX, closeY, 18, 18, mouseX, mouseY);
-        RoundedGui.fill(graphics, closeX, closeY, 18, 18, 9, closeHovered ? theme.hover() : theme.header());
-        graphics.drawText(font(), ArcaneFont.text("×"), closeX + 6, closeY + 5, closeHovered ? theme.text() : theme.faint(), false);
-        this.hitRegions.add(HitRegion.close(closeX, closeY, 18, 18));
-        if (module.toggleable()) {
-            int toggleX = closeX - 36;
-            drawSwitch(graphics, toggleX, closeY + 3, module.enabled(), theme);
-            this.hitRegions.add(HitRegion.moduleToggle(module, toggleX - 3, closeY - 2, 30, 23));
+        if (this.inspectorOverlay) {
+            boolean closeHovered = contains(right - 14, this.inspectorY + 5, 14, 14, mouseX, mouseY);
+            graphics.drawText(font(), ArcaneFont.text("\u00d7"), right - 14 + (14 - ArcaneFont.width(font(), "\u00d7")) / 2, this.inspectorY + 8, closeHovered ? theme.text() : theme.faint(), false);
+            this.hitRegions.add(HitRegion.close(right - 14, this.inspectorY + 5, 14, 14));
         }
 
-        int descriptionY = this.detailY + 51;
-        graphics.drawText(font(), ArcaneFont.trimmed(font(), module.description(), this.detailWidth - 24), this.detailX + 12, descriptionY, theme.muted(), false);
-        graphics.fill(this.detailX + 12, descriptionY + 16, this.detailX + this.detailWidth - 12, descriptionY + 17, theme.outlineSoft());
+        int nameY = this.inspectorY + 21;
+        int nameLimit = this.inspectorWidth - 20 - (module.toggleable() ? TOGGLE_WIDTH + 10 : 0);
+        graphics.drawText(font(), ArcaneFont.trimmed(font(), module.name(), Math.max(30, nameLimit)), x + 10, nameY, theme.text(), false);
+        if (module.toggleable()) {
+            int toggleX = right - TOGGLE_WIDTH;
+            drawSwitch(graphics, toggleX, nameY - 1, module.enabled(), theme, true);
+            this.hitRegions.add(HitRegion.moduleToggle(module, toggleX - 4, nameY - 5, TOGGLE_WIDTH + 8, 19));
+        }
 
-        int viewportX = this.detailX + 11;
-        int viewportY = descriptionY + 25;
-        int viewportWidth = this.detailWidth - 22;
-        int viewportHeight = this.detailY + this.detailHeight - viewportY - 11;
-        int columns = 1;
-        int cellWidth = viewportWidth;
-        int rows = (module.settings().size() + columns - 1) / columns;
-        int contentHeight = Math.max(viewportHeight, rows * 40);
+        int cursor = nameY + lineHeight() + 5;
+        List<String> description = wrap(module.description(), this.inspectorWidth - 20);
+        for (int line = 0; line < Math.min(2, description.size()); line++) {
+            graphics.drawText(font(), ArcaneFont.text(description.get(line)), x + 10, cursor, theme.faint(), false);
+            cursor += lineHeight() + 1;
+        }
+        cursor += 4;
+        graphics.fill(x + 10, cursor, x + this.inspectorWidth - 10, cursor + 1, theme.outlineSoft());
+        cursor += 6;
+
+        int viewportX = x + 8;
+        int viewportY = cursor;
+        int viewportWidth = this.inspectorWidth - 16;
+        int viewportHeight = this.inspectorY + this.inspectorHeight - viewportY - 6;
+        if (viewportHeight <= 0) return;
+        if (!module.hasSettings()) {
+            RoundedGui.fill(graphics, viewportX, viewportY, viewportWidth, 26, 7, theme.header());
+            graphics.drawText(font(), ArcaneFont.trimmed(font(), "No extra controls", viewportWidth - 16), viewportX + 9, viewportY + (26 - lineHeight()) / 2, theme.faint(), false);
+            this.detailMaxScroll = 0;
+            return;
+        }
+
+        int contentHeight = 0;
+        for (GuiSetting setting : module.settings()) contentHeight += displayHeight(setting) + SETTING_GAP;
+        contentHeight = Math.max(0, contentHeight - SETTING_GAP);
         this.detailMaxScroll = Math.max(0, contentHeight - viewportHeight);
         this.detailScroll = Math.clamp(this.detailScroll, 0, this.detailMaxScroll);
-        if (!module.hasSettings()) {
-            RoundedGui.fill(graphics, viewportX, viewportY, viewportWidth, 34, 9, theme.header());
-            graphics.drawText(font(), ArcaneFont.text("This module has no additional controls."), viewportX + 12, viewportY + 12, theme.faint(), false);
-        } else {
-            graphics.enableScissor(viewportX, viewportY, viewportX + viewportWidth, viewportY + viewportHeight);
-            for (int index = 0; index < module.settings().size(); index++) {
-                int column = index % columns;
-                int row = index / columns;
-                int cellX = viewportX + column * (cellWidth + CARD_GAP);
-                int cellY = viewportY + row * 40 - this.detailScroll;
-                if (cellY + 36 >= viewportY && cellY <= viewportY + viewportHeight) {
-                    drawSetting(graphics, module.settings().get(index), cellX, cellY, cellWidth, 36, mouseX, mouseY, theme, macroDrawn);
-                }
+
+        graphics.enableScissor(viewportX, viewportY, viewportX + viewportWidth, viewportY + viewportHeight);
+        int settingY = viewportY - this.detailScroll;
+        for (GuiSetting setting : module.settings()) {
+            int height = displayHeight(setting);
+            if (settingY + height >= viewportY && settingY <= viewportY + viewportHeight) {
+                drawSetting(graphics, setting, viewportX, settingY, viewportWidth, height, mouseX, mouseY, theme, macroDrawn, viewportY, viewportHeight);
             }
-            graphics.disableScissor();
+            settingY += height + SETTING_GAP;
         }
-        drawScrollBar(graphics, this.detailX + this.detailWidth - 8, viewportY, viewportHeight, this.detailScroll, this.detailMaxScroll, contentHeight, theme);
+        graphics.disableScissor();
+        drawScrollBar(graphics, x + this.inspectorWidth - 5, viewportY, viewportHeight, this.detailScroll, this.detailMaxScroll, contentHeight, theme);
     }
 
-    private void drawSetting(DrawContext graphics, GuiSetting setting, int x, int y, int width, int height, int mouseX, int mouseY, ClickGuiColors theme, boolean[] macroDrawn) {
-        boolean hovered = contains(x, y, width, height, mouseX, mouseY);
-        RoundedGui.fill(graphics, x, y, width, height, 7, hovered && !(setting instanceof GuiSetting.Info) ? theme.hover() : theme.header());
-        int right = x + width - 10;
-        int textY = y + (setting instanceof GuiSetting.Slider ? 7 : (height - lineHeight()) / 2);
-        graphics.drawText(font(), ArcaneFont.text(setting.label()), x + 10, textY, theme.muted(), false);
+    private void drawSetting(
+        DrawContext graphics,
+        GuiSetting setting,
+        int x,
+        int y,
+        int width,
+        int height,
+        int mouseX,
+        int mouseY,
+        ClickGuiColors theme,
+        boolean[] macroDrawn,
+        int viewportY,
+        int viewportHeight
+    ) {
+        boolean interactive = !(setting instanceof GuiSetting.Info);
+        boolean visible = y >= viewportY && y + height <= viewportY + viewportHeight;
+        boolean hovered = interactive && visible && contains(x, y, width, height, mouseX, mouseY);
+        RoundedGui.fill(graphics, x, y, width, height, 7, hovered ? theme.hover() : theme.header());
+        int right = x + width - 9;
+        int labelY = setting instanceof GuiSetting.Slider || setting instanceof GuiSetting.Message
+            ? y + 6
+            : y + (height - lineHeight()) / 2;
+        int labelLimit = width - 18 - settingControlWidth(setting);
+        graphics.drawText(font(), ArcaneFont.trimmed(font(), setting.label(), Math.max(24, labelLimit)), x + 9, labelY, theme.muted(), false);
+
         switch (setting) {
-            case GuiSetting.Toggle toggle -> drawSwitch(graphics, right - 24, y + (height - 11) / 2, toggle.value(), theme);
+            case GuiSetting.Toggle toggle -> drawSwitch(graphics, right - TOGGLE_WIDTH, y + (height - TOGGLE_HEIGHT) / 2, toggle.value(), theme, false);
             case GuiSetting.ToggleSwatch toggle -> {
-                drawSwatch(graphics, right - 47, y + (height - 10) / 2, 15, toggle.color(), theme);
-                drawSwitch(graphics, right - 24, y + (height - 11) / 2, toggle.value(), theme);
+                drawSwatch(graphics, right - TOGGLE_WIDTH - 21, y + (height - 10) / 2, 15, toggle.color(), theme);
+                drawSwitch(graphics, right - TOGGLE_WIDTH, y + (height - TOGGLE_HEIGHT) / 2, toggle.value(), theme, false);
             }
             case GuiSetting.Slider slider -> {
                 String display = slider.display();
-                graphics.drawText(font(), ArcaneFont.text(display), right - ArcaneFont.width(font(), display), textY, theme.text(), false);
-                int trackX = x + 10;
-                int trackWidth = width - 20;
-                int trackY = y + height - 8;
-                RoundedGui.fill(graphics, trackX, trackY, trackWidth, 3, 2, theme.outlineSoft());
+                graphics.drawText(font(), ArcaneFont.text(display), right - ArcaneFont.width(font(), display), labelY, theme.accentBright(), false);
+                int trackX = x + 9;
+                int trackWidth = width - 18;
+                int trackY = y + height - 11;
+                RoundedGui.fill(graphics, trackX, trackY, trackWidth, 3, 1, theme.outlineSoft());
                 int filled = Math.round(trackWidth * slider.fraction());
-                if (filled > 0) RoundedGui.fill(graphics, trackX, trackY, filled, 3, 2, theme.accent());
-                RoundedGui.fill(graphics, trackX + Math.clamp(filled - 3, 0, trackWidth - 6), trackY - 2, 6, 7, 3, theme.accentBright());
+                if (filled > 1) RoundedGui.gradient(graphics, trackX, trackY, filled, 3, 1, theme.accent(), theme.accentAlt(), true);
+                int knobX = trackX + Math.clamp(filled - 3, 0, Math.max(0, trackWidth - 6));
+                RoundedGui.fill(graphics, knobX, trackY - 2, 6, 7, 3, theme.accentBright());
             }
-            case GuiSetting.Swatch swatch -> drawSwatch(graphics, right - 28, y + (height - 10) / 2, 28, swatch.color(), theme);
+            case GuiSetting.Swatch swatch -> drawSwatch(graphics, right - 26, y + (height - 10) / 2, 26, swatch.color(), theme);
             case GuiSetting.Cycle cycle -> drawValuePill(graphics, right, y, height, cycle.value(), theme);
             case GuiSetting.Bind bind -> drawKeyPill(graphics, right, y, height, bind.mapping(), theme, BIND_KEY_WIDTH);
             case GuiSetting.Info info -> {
                 String value = info.value();
-                graphics.drawText(font(), ArcaneFont.text(value), right - ArcaneFont.width(font(), value), textY, theme.accentBright(), false);
+                graphics.drawText(font(), ArcaneFont.trimmed(font(), value, width / 2), right - Math.min(ArcaneFont.width(font(), value), width / 2), labelY, theme.accentBright(), false);
             }
             case GuiSetting.Message message -> {
-                int fieldX = right - MACRO_FIELD_WIDTH - 39;
-                RoundedGui.fill(graphics, fieldX - 5, y + 6, MACRO_FIELD_WIDTH + 10, 16, 6, theme.window());
+                if (message.mapping() != null) drawKeyPill(graphics, right, y + 1, lineHeight() + 8, message.mapping(), theme, 26);
+                int fieldY = y + height - 17;
+                RoundedGui.fill(graphics, x + 8, fieldY, width - 16, 14, 5, theme.window());
                 TextFieldWidget input = this.macroInputs.get(message.slot());
-                input.setX(fieldX);
-                input.setY(y + 9);
-                input.setVisible(y >= this.detailY && y + height <= this.detailY + this.detailHeight);
-                macroDrawn[message.slot()] = input.isVisible();
-                if (message.mapping() != null) drawKeyPill(graphics, right, y, height, message.mapping(), theme, 27);
+                input.setX(x + 12);
+                input.setY(fieldY + 3);
+                input.setWidth(width - 24);
+                input.setVisible(visible);
+                macroDrawn[message.slot()] = visible;
             }
         }
-        if (y >= this.detailY && y + height <= this.detailY + this.detailHeight) {
-            this.hitRegions.add(HitRegion.setting(setting, x, y, width, height));
-        }
+        if (visible) this.hitRegions.add(HitRegion.setting(setting, x, y, width, height));
+    }
+
+    private void drawFooter(DrawContext graphics, ClickGuiColors theme) {
+        int footerY = this.panelY + this.panelHeight - FOOTER_HEIGHT;
+        int textY = footerY + (FOOTER_HEIGHT - lineHeight()) / 2;
+        updateFpsLabel();
+        String status = this.fpsLabel + "  ·  " + activeModuleCount() + " ACTIVE";
+        graphics.drawText(font(), ArcaneFont.text(status), this.panelX + this.panelWidth - 11 - ArcaneFont.width(font(), status), textY, theme.faint(), false);
+        String hint = "Click toggles  ·  ··· opens settings  ·  Middle-click binds";
+        int hintLimit = this.panelWidth - 32 - ArcaneFont.width(font(), status);
+        if (hintLimit > 60) graphics.drawText(font(), ArcaneFont.trimmed(font(), hint, hintLimit), this.panelX + 11, textY, theme.faint(), false);
     }
 
     private void drawScrollBar(DrawContext graphics, int x, int y, int height, int offset, int maxOffset, int contentHeight, ClickGuiColors theme) {
-        if (maxOffset <= 0 || contentHeight <= 0) return;
-        int thumbHeight = Math.max(14, height * height / Math.max(height, contentHeight));
+        if (maxOffset <= 0 || contentHeight <= 0 || height <= 0) return;
+        int thumbHeight = Math.max(16, height * height / Math.max(height, contentHeight));
         int travel = Math.max(0, height - thumbHeight);
         int thumbY = y + travel * offset / maxOffset;
-        RoundedGui.fill(graphics, x, thumbY, 2, thumbHeight, 1, theme.accentDim());
+        RoundedGui.fill(graphics, x, y, 2, height, 1, theme.outlineSoft());
+        RoundedGui.gradient(graphics, x, thumbY, 2, thumbHeight, 1, theme.accent(), theme.accentAlt(), false);
     }
 
-    private static void drawSwitch(DrawContext graphics, int x, int y, boolean enabled, ClickGuiColors theme) {
-        RoundedGui.fill(graphics, x, y, 24, 11, 6, enabled ? theme.accent() : theme.outlineSoft());
-        RoundedGui.fill(graphics, enabled ? x + 15 : x + 2, y + 2, 7, 7, 4, enabled ? opaque(theme.bar()) : theme.muted());
+    private static void drawSwitch(DrawContext graphics, int x, int y, boolean enabled, ClickGuiColors theme, boolean gradient) {
+        if (!enabled) {
+            RoundedGui.fill(graphics, x, y, TOGGLE_WIDTH, TOGGLE_HEIGHT, 5, theme.outlineSoft());
+            RoundedGui.fill(graphics, x + 2, y + 2, 7, 7, 3, theme.muted());
+            return;
+        }
+        if (gradient) RoundedGui.gradient(graphics, x, y, TOGGLE_WIDTH, TOGGLE_HEIGHT, 5, theme.accent(), theme.accentAlt(), true);
+        else RoundedGui.fill(graphics, x, y, TOGGLE_WIDTH, TOGGLE_HEIGHT, 5, theme.accent());
+        RoundedGui.fill(graphics, x + TOGGLE_WIDTH - 9, y + 2, 7, 7, 3, opaque(theme.bar()));
     }
 
     private void drawValuePill(DrawContext graphics, int right, int y, int height, String value, ClickGuiColors theme) {
-        OrderedText text = ArcaneFont.trimmed(font(), value, 74);
+        OrderedText text = ArcaneFont.trimmed(font(), value, 70);
         int textWidth = font().getWidth(text);
-        int width = Math.max(28, textWidth + 12);
-        int pillY = y + (height - 16) / 2;
-        RoundedGui.fill(graphics, right - width, pillY, width, 16, 6, theme.window());
-        graphics.drawText(font(), text, right - width + 6, pillY + 4, theme.accentBright(), false);
+        int width = Math.max(26, textWidth + 12);
+        int pillY = y + (height - 15) / 2;
+        RoundedGui.fill(graphics, right - width, pillY, width, 15, 5, theme.window());
+        graphics.drawText(font(), text, right - width + (width - textWidth) / 2, pillY + (15 - lineHeight()) / 2, theme.accentBright(), false);
     }
 
     private void drawKeyPill(DrawContext graphics, int right, int y, int height, KeyBinding mapping, ClickGuiColors theme, int maxKeyWidth) {
@@ -430,21 +518,22 @@ public final class ArcaneSettingsScreen extends Screen {
         String raw = listening ? "..." : mapping.isUnbound() ? "—" : mapping.getBoundKeyLocalizedText().getString();
         OrderedText key = ArcaneFont.trimmed(font(), raw, maxKeyWidth);
         int keyWidth = font().getWidth(key);
-        int width = Math.max(24, keyWidth + 10);
-        int pillY = y + (height - 16) / 2;
-        RoundedGui.fill(graphics, right - width, pillY, width, 16, 6, listening ? theme.active() : theme.window());
-        graphics.drawText(font(), key, right - width + (width - keyWidth) / 2, pillY + 4, listening ? theme.text() : theme.muted(), false);
+        int width = Math.max(22, keyWidth + 10);
+        int pillY = y + (height - 15) / 2;
+        RoundedGui.fill(graphics, right - width, pillY, width, 15, 5, listening ? theme.active() : theme.window());
+        if (listening) RoundedGui.outlineOnly(graphics, right - width, pillY, width, 15, 5, theme.accent());
+        graphics.drawText(font(), key, right - width + (width - keyWidth) / 2, pillY + (15 - lineHeight()) / 2, listening ? theme.accentBright() : theme.muted(), false);
     }
 
     private static void drawSwatch(DrawContext graphics, int x, int y, int width, int color, ClickGuiColors theme) {
         RoundedGui.fill(graphics, x, y, width, 10, 4, color | 0xFF000000);
-        RoundedGui.fill(graphics, x + 3, y + 2, Math.max(1, width - 6), 1, 1, theme.outlineSoft());
+        RoundedGui.outlineOnly(graphics, x, y, width, 10, 4, theme.outlineSoft());
     }
 
     @Override
     public boolean mouseScrolled(double mouseX, double mouseY, double horizontalAmount, double verticalAmount) {
-        int amount = (int) Math.round(-verticalAmount * 24.0);
-        if (this.settingsOpen && contains(this.detailX, this.detailY, this.detailWidth, this.detailHeight, mouseX, mouseY)) {
+        int amount = (int) Math.round(-verticalAmount * 22.0);
+        if (this.inspectorWidth > 0 && contains(this.inspectorX, this.inspectorY, this.inspectorWidth, this.inspectorHeight, mouseX, mouseY)) {
             this.detailScroll = Math.clamp(this.detailScroll + amount, 0, this.detailMaxScroll);
             return true;
         }
@@ -470,25 +559,38 @@ public final class ArcaneSettingsScreen extends Screen {
             if (!region.contains(mouseX, mouseY)) continue;
             switch (region.kind()) {
                 case CATEGORY -> {
-                    selectCategory(region.category());
+                    if (button == 0) selectCategory(region.category());
                     setFocused(null);
                     return true;
                 }
                 case MODULE -> {
+                    GuiModule module = region.module();
+                    if (module == null) return true;
                     this.selectedCategory = region.category();
-                    this.selectedModule = region.module();
-                    this.detailScroll = 0;
+                    this.selectedModule = module;
                     setFocused(null);
-                    if (button == 2) startListening(firstBind(region.module()));
-                    else if (button == 1 && region.module().hasSettings()) this.settingsOpen = true;
-                    else if (button == 0 && region.module().hasSettings()
-                        && mouseX >= region.x() + region.width() - 34
-                        && mouseY >= region.y() + region.height() - 25) this.settingsOpen = true;
-                    else if (button == 0 && region.module().toggleable()) region.module().toggle();
+                    if (button == 2) startListening(firstBind(module));
+                    else if (button == 1) openInspector(module);
+                    else if (module.toggleable()) module.toggle();
+                    else openInspector(module);
                     return true;
                 }
                 case MODULE_TOGGLE -> {
-                    if (button == 0 && region.module().toggleable()) region.module().toggle();
+                    GuiModule module = region.module();
+                    if (button == 0 && module != null && module.toggleable()) module.toggle();
+                    else if (button == 2 && module != null) startListening(firstBind(module));
+                    setFocused(null);
+                    return true;
+                }
+                case MODULE_SETTINGS -> {
+                    if (button == 2) {
+                        startListening(firstBind(region.module()));
+                        return true;
+                    }
+                    this.selectedCategory = region.category();
+                    this.selectedModule = region.module();
+                    setFocused(null);
+                    openInspector(region.module());
                     return true;
                 }
                 case SETTING -> {
@@ -497,48 +599,55 @@ public final class ArcaneSettingsScreen extends Screen {
                 }
                 case CLOSE_SETTINGS -> {
                     if (button == 0) {
-                        this.settingsOpen = false;
-                        setFocused(null);
+                        if (this.settingsOpen) {
+                            this.settingsOpen = false;
+                            this.detailScroll = 0;
+                            setFocused(null);
+                        } else close();
                     }
                     return true;
                 }
-                case DRAG_WORKSPACE -> {
-                    if (button == 0) beginSurfaceDrag(DragTarget.WORKSPACE, mouseX, mouseY);
+                case DRAG_PANEL -> {
+                    if (button == 0) beginPanelDrag(mouseX, mouseY);
                     return true;
                 }
-                case DRAG_DETAIL -> {
-                    if (button == 0) beginSurfaceDrag(DragTarget.DETAIL, mouseX, mouseY);
-                    return true;
+                case PASSTHROUGH -> {
+                    return super.mouseClicked(click, doubled);
                 }
             }
         }
         return super.mouseClicked(click, doubled);
     }
 
+    private void openInspector(@Nullable GuiModule module) {
+        if (module == null) return;
+        this.settingsOpen = true;
+        this.detailScroll = 0;
+    }
+
     private @Nullable Boolean handleSettingClick(HitRegion region, Click click, boolean doubled, int mouseX, int mouseY, int button) {
         GuiSetting setting = region.setting();
         if (setting == null) return true;
         if (setting instanceof GuiSetting.Message message) {
-            int right = region.x() + region.width() - 10;
-            int fieldX = right - MACRO_FIELD_WIDTH - 39;
-            if (mouseX >= fieldX - 5 && mouseX < fieldX + MACRO_FIELD_WIDTH + 5) return super.mouseClicked(click, doubled);
-            if (button == 0 && message.mapping() != null && mouseX >= right - 34) startListening(message.mapping());
+            int fieldY = region.y() + region.height() - 17;
+            if (mouseY >= fieldY) return super.mouseClicked(click, doubled);
+            if (button == 0 && message.mapping() != null && mouseX >= region.x() + region.width() - 40) startListening(message.mapping());
             return true;
         }
         if (button != 0) return true;
         setFocused(null);
+        int right = region.x() + region.width() - 9;
         switch (setting) {
             case GuiSetting.Toggle toggle -> toggle.toggle();
             case GuiSetting.ToggleSwatch toggle -> {
-                int right = region.x() + region.width() - 10;
-                if (mouseX >= right - 52 && mouseX < right - 28) toggle.cycleColor();
+                if (mouseX >= right - TOGGLE_WIDTH - 21 && mouseX < right - TOGGLE_WIDTH - 4) toggle.cycleColor();
                 else toggle.toggle();
             }
             case GuiSetting.Slider slider -> {
-                if (mouseY >= region.y() + region.height() - 13) {
+                if (mouseY >= region.y() + region.height() - 14) {
                     this.draggingSlider = slider;
-                    this.sliderTrackX = region.x() + 10;
-                    this.sliderTrackWidth = region.width() - 20;
+                    this.sliderTrackX = region.x() + 9;
+                    this.sliderTrackWidth = region.width() - 18;
                     updateSlider(mouseX);
                 }
             }
@@ -557,17 +666,10 @@ public final class ArcaneSettingsScreen extends Screen {
             updateSlider((int) click.x());
             return true;
         }
-        if (this.draggingSurface != null) {
-            int mouseX = (int) click.x();
-            int mouseY = (int) click.y();
-            if (this.draggingSurface == DragTarget.WORKSPACE) {
-                this.workspaceOffsetX = this.dragStartOffsetX + mouseX - this.dragStartMouseX;
-                this.workspaceOffsetY = this.dragStartOffsetY + mouseY - this.dragStartMouseY;
-            } else {
-                this.detailOffsetX = this.dragStartOffsetX + mouseX - this.dragStartMouseX;
-                this.detailOffsetY = this.dragStartOffsetY + mouseY - this.dragStartMouseY;
-            }
-            layoutFrame();
+        if (this.dragging) {
+            this.panelOffsetX = this.dragStartOffsetX + (int) click.x() - this.dragStartMouseX;
+            this.panelOffsetY = this.dragStartOffsetY + (int) click.y() - this.dragStartMouseY;
+            layoutPanel();
             return true;
         }
         return super.mouseDragged(click, offsetX, offsetY);
@@ -579,20 +681,20 @@ public final class ArcaneSettingsScreen extends Screen {
             this.draggingSlider = null;
             return true;
         }
-        if (this.draggingSurface != null) {
-            this.draggingSurface = null;
+        if (this.dragging) {
+            this.dragging = false;
             return true;
         }
         return super.mouseReleased(click);
     }
 
-    private void beginSurfaceDrag(DragTarget target, int mouseX, int mouseY) {
+    private void beginPanelDrag(int mouseX, int mouseY) {
         setFocused(null);
-        this.draggingSurface = target;
+        this.dragging = true;
         this.dragStartMouseX = mouseX;
         this.dragStartMouseY = mouseY;
-        this.dragStartOffsetX = target == DragTarget.WORKSPACE ? this.workspaceOffsetX : this.detailOffsetX;
-        this.dragStartOffsetY = target == DragTarget.WORKSPACE ? this.workspaceOffsetY : this.detailOffsetY;
+        this.dragStartOffsetX = this.panelOffsetX;
+        this.dragStartOffsetY = this.panelOffsetY;
     }
 
     @Override
@@ -609,6 +711,7 @@ public final class ArcaneSettingsScreen extends Screen {
         }
         if (input.key() == 256 && this.settingsOpen) {
             this.settingsOpen = false;
+            this.detailScroll = 0;
             setFocused(null);
             return true;
         }
@@ -658,12 +761,6 @@ public final class ArcaneSettingsScreen extends Screen {
         ensureSelection();
     }
 
-    private int visibleModuleCount() {
-        int count = 0;
-        for (GuiCategory category : this.categories) count += category.visible().size();
-        return count;
-    }
-
     private int activeModuleCount() {
         int active = 0;
         for (GuiCategory category : this.categories) for (GuiModule module : category.modules()) if (module.enabled()) active++;
@@ -696,9 +793,33 @@ public final class ArcaneSettingsScreen extends Screen {
         this.draggingSlider.setFraction((float) (mouseX - this.sliderTrackX) / this.sliderTrackWidth);
     }
 
-    private static @Nullable KeyBinding firstBind(GuiModule module) {
+    private boolean withinList(int y) {
+        return y >= this.listY - 1 && y + ROW_HEIGHT <= this.listY + this.listHeight + 1;
+    }
+
+    private static @Nullable KeyBinding firstBind(@Nullable GuiModule module) {
+        if (module == null) return null;
         for (GuiSetting setting : module.settings()) if (setting instanceof GuiSetting.Bind bind) return bind.mapping();
         return null;
+    }
+
+    private static int displayHeight(GuiSetting setting) {
+        if (setting instanceof GuiSetting.Slider) return SETTING_SLIDER_HEIGHT;
+        if (setting instanceof GuiSetting.Message) return SETTING_MESSAGE_HEIGHT;
+        return SETTING_COMPACT_HEIGHT;
+    }
+
+    private static int settingControlWidth(GuiSetting setting) {
+        return switch (setting) {
+            case GuiSetting.ToggleSwatch ignored -> TOGGLE_WIDTH + 24;
+            case GuiSetting.Toggle ignored -> TOGGLE_WIDTH + 4;
+            case GuiSetting.Swatch ignored -> 30;
+            case GuiSetting.Slider ignored -> 40;
+            case GuiSetting.Bind ignored -> BIND_KEY_WIDTH + 8;
+            case GuiSetting.Cycle ignored -> 60;
+            case GuiSetting.Info ignored -> 50;
+            case GuiSetting.Message ignored -> 34;
+        };
     }
 
     private List<String> wrap(String text, int maxWidth) {
@@ -719,10 +840,6 @@ public final class ArcaneSettingsScreen extends Screen {
         return List.copyOf(lines);
     }
 
-    private String shortDescription(String description, int maxWidth) {
-        return description;
-    }
-
     private static String titleCase(String value) {
         String lower = value.toLowerCase(Locale.ROOT);
         StringBuilder result = new StringBuilder(lower.length());
@@ -735,26 +852,9 @@ public final class ArcaneSettingsScreen extends Screen {
         return result.toString();
     }
 
-    private static String twoDigits(int value) {
-        return value < 10 ? "0" + value : Integer.toString(value);
-    }
-
-    private static String categoryGlyph(String name) {
-        return switch (name) {
-            case "COMBAT" -> "CO";
-            case "ESP" -> "ES";
-            case "RENDER" -> "RE";
-            case "CLIENT" -> "CL";
-            case "UTILITY" -> "UT";
-            case "BASE FINDING" -> "BF";
-            default -> name.substring(0, Math.min(2, name.length()));
-        };
-    }
-
-    private static int settingHeight(GuiSetting setting) {
-        if (setting instanceof GuiSetting.Slider) return 34;
-        if (setting instanceof GuiSetting.Message) return 28;
-        return 23;
+    /** Category names are stored upper case; acronyms must survive the title-casing. */
+    static String categoryLabel(String name) {
+        return name.equals("ESP") ? "ESP" : titleCase(name);
     }
 
     private static boolean contains(int x, int y, int width, int height, double mouseX, double mouseY) {
@@ -783,7 +883,6 @@ public final class ArcaneSettingsScreen extends Screen {
     }
 
     private int lineHeight() { return font().fontHeight; }
-    private int proseHeight() { return lineHeight() + 3; }
 
     public static boolean isOpen(MinecraftClient client) { return client.currentScreen instanceof ArcaneSettingsScreen; }
 
@@ -801,8 +900,7 @@ public final class ArcaneSettingsScreen extends Screen {
     @Override
     public boolean shouldPause() { return false; }
 
-    private enum DragTarget { WORKSPACE, DETAIL }
-    private enum RegionKind { CATEGORY, MODULE, MODULE_TOGGLE, SETTING, CLOSE_SETTINGS, DRAG_WORKSPACE, DRAG_DETAIL }
+    private enum RegionKind { CATEGORY, MODULE, MODULE_TOGGLE, MODULE_SETTINGS, SETTING, CLOSE_SETTINGS, DRAG_PANEL, PASSTHROUGH }
     private record WrapKey(String text, int maxWidth) { }
     private record ModuleEntry(GuiCategory category, GuiModule module) { }
 
@@ -810,10 +908,11 @@ public final class ArcaneSettingsScreen extends Screen {
         private static HitRegion category(GuiCategory category, int x, int y, int width, int height) { return new HitRegion(RegionKind.CATEGORY, category, null, null, x, y, width, height); }
         private static HitRegion module(GuiCategory category, GuiModule module, int x, int y, int width, int height) { return new HitRegion(RegionKind.MODULE, category, module, null, x, y, width, height); }
         private static HitRegion moduleToggle(GuiModule module, int x, int y, int width, int height) { return new HitRegion(RegionKind.MODULE_TOGGLE, null, module, null, x, y, width, height); }
+        private static HitRegion moduleSettings(GuiCategory category, GuiModule module, int x, int y, int width, int height) { return new HitRegion(RegionKind.MODULE_SETTINGS, category, module, null, x, y, width, height); }
         private static HitRegion setting(GuiSetting setting, int x, int y, int width, int height) { return new HitRegion(RegionKind.SETTING, null, null, setting, x, y, width, height); }
         private static HitRegion close(int x, int y, int width, int height) { return new HitRegion(RegionKind.CLOSE_SETTINGS, null, null, null, x, y, width, height); }
-        private static HitRegion dragWorkspace(int x, int y, int width, int height) { return new HitRegion(RegionKind.DRAG_WORKSPACE, null, null, null, x, y, width, height); }
-        private static HitRegion dragDetail(int x, int y, int width, int height) { return new HitRegion(RegionKind.DRAG_DETAIL, null, null, null, x, y, width, height); }
+        private static HitRegion drag(int x, int y, int width, int height) { return new HitRegion(RegionKind.DRAG_PANEL, null, null, null, x, y, width, height); }
+        private static HitRegion passthrough(int x, int y, int width, int height) { return new HitRegion(RegionKind.PASSTHROUGH, null, null, null, x, y, width, height); }
         private boolean contains(int mouseX, int mouseY) { return ArcaneSettingsScreen.contains(this.x, this.y, this.width, this.height, mouseX, mouseY); }
     }
 }
